Fix footer gaps

--- a/src/components/footer/Footer.module.css
+++ b/src/components/footer/Footer.module.css
@@ -96,7 +96,7 @@
 @media (--screen-md) {
   .container {
     grid-template-columns: repeat(2, auto) 1fr;
-    gap: clamp(4rem, calc(-0.86rem + 10.12vw), 8.25rem);
+    gap: clamp(4rem, calc(-2.37rem + 13.28vw), 8.25rem);
   }
 
   .left {
@@ -108,7 +108,7 @@
     grid-auto-flow: column;
     grid-auto-columns: auto;
     justify-content: center;
-    column-gap: clamp(2rem, calc(-5.14rem + 14.88vw), 8.25rem);
+    column-gap: clamp(2rem, calc(-7.37rem + 19.53vw), 8.25rem);
   }
 
   .navLink {
